{
  "version": 4,
  "terraform_version": "0.13.4",
  "serial": 10,
  "lineage": "6738ab20-b757-f502-35d5-4ac479f28a25",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-032930428bf1abbff",
            "arn": "arn:aws:ec2:us-east-1:005290731845:instance/i-0a09af8f796c5023c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a09af8f796c5023c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devopskey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d1248c22e68e55a0",
            "private_dns": "ip-10-1-1-242.ec2.internal",
            "private_ip": "10.1.1.242",
            "public_dns": "ec2-18-232-123-189.compute-1.amazonaws.com",
            "public_ip": "18.232.123.189",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-02d3c67622333e5ba",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e82a42785a857e59",
            "tags": {
              "Env": "Prod",
              "Name": "Terraform-Server1",
              "Owner": "radha"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d21ed0276fa98ae7"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.subnet1-public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:005290731845:internet-gateway/igw-0a57e271373118558",
            "id": "igw-0a57e271373118558",
            "owner_id": "005290731845",
            "tags": {
              "Name": "TERRAFORM-TEST-IGW"
            },
            "vpc_id": "vpc-078b5ce5375eb30fe"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-080fedfc06b1d475b",
            "owner_id": "005290731845",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a57e271373118558",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TERRAFORM-TEST_Main_table-testing"
            },
            "vpc_id": "vpc-078b5ce5375eb30fe"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a63ad4e1effc0294",
            "route_table_id": "rtb-080fedfc06b1d475b",
            "subnet_id": "subnet-0e82a42785a857e59"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.subnet1-public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:005290731845:security-group/sg-0d21ed0276fa98ae7",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d21ed0276fa98ae7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "005290731845",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-078b5ce5375eb30fe"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:005290731845:subnet/subnet-0e82a42785a857e59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-0e82a42785a857e59",
            "map_public_ip_on_launch": false,
            "owner_id": "005290731845",
            "tags": {
              "Name": "TERRAFORM-TEST_public_Subnet1-testing"
            },
            "vpc_id": "vpc-078b5ce5375eb30fe"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:005290731845:subnet/subnet-02b10cf23bded4b56",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-02b10cf23bded4b56",
            "map_public_ip_on_launch": false,
            "owner_id": "005290731845",
            "tags": {
              "Name": "TERRAFORM-TEST_public_Subnet2-testing"
            },
            "vpc_id": "vpc-078b5ce5375eb30fe"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:005290731845:subnet/subnet-0544b188cf2524e4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.3.0/24",
            "id": "subnet-0544b188cf2524e4d",
            "map_public_ip_on_launch": false,
            "owner_id": "005290731845",
            "tags": {
              "Name": "TERRAFORM-TEST_public_Subnet3-testing"
            },
            "vpc_id": "vpc-078b5ce5375eb30fe"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:005290731845:vpc/vpc-078b5ce5375eb30fe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-036f6bbc724a0d9f2",
            "default_route_table_id": "rtb-006a826e5cbdd7daa",
            "default_security_group_id": "sg-0c966ad00f36b2a9d",
            "dhcp_options_id": "dopt-3f7f1e45",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-078b5ce5375eb30fe",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-006a826e5cbdd7daa",
            "owner_id": "005290731845",
            "tags": {
              "Name": "TERRAFORM-TEST",
              "Owner": "Sree"
            }
          }
        }
      ]
    }
  ]
}